--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@ temp/*
 
 # dashboard folder, removed because I can't code in HTML
 # Yes, there is one, it's just not working at all. Emphasis on "at all".
-src/conscr/dashboard/*
+src/conscr/dashboard/
 src/dashboard.html
