--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "AdBlockingStuff",
-  "version": "1.0-mv2-github:main",
+  "version": "1.0.3",
   "description": "youtube kids amogus pee poop and fard compilation",
   "icons": {
     "16": "icons/icon-16x16.png",
